welcome.lessons.welcome.loopfor.LoopFor.scala.error
Program:3: error: ';' expected but 'else' found.
else avance ()
^